# dag

./: Makefile  Pipfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  tests.yml
dag/: executors.py  graph.py  logs.py  operators.py  serialization.py  validators.py
resources/: example_1.xml  example_2.xml  example_with_exception.xml
resources/not_valid/: cycled_1.xml  cycled_2.xml  disconnected_1.xml  disconnected_2.xml  single.xml
tests/: conftest.py  run_dag_evaluation.py  test_graph.py  test_serialization.py  test_validators.py
